In project entity: I've changed types from 3 attributes (and modified their respective getters and setters) and added one, I've included setRestBudget into set total and parcial budget and I've added constructor for loading BBDD; in oneProject template: I've added {{#opened}} notation to show or die information depending on project state and added image attribute

--- a/WADWolfram/src/main/resources/templates/pay.html
+++ b/WADWolfram/src/main/resources/templates/pay.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -79,8 +79,8 @@
                                 <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Apellidos">
                             </div>
                             <div class="form-group">
-                                <label for="creditCard">Tarjeta de credito</label>
-                                <input type="text" class="form-control" id="creditCard" placeholder="Numero de tarjeta">
+                                <label for="creditCard">Tarjeta de crédito</label>
+                                <input type="text" class="form-control" id="creditCard" placeholder="Número de tarjeta">
                             </div>
                             <div class="form-group">
                                 <label class="control-label" for="expiry-month">Fecha Expiración</label>
@@ -112,11 +112,11 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="csv">Numero seguridad</label>
+                                <label for="csv">Número de seguridad</label>
                                 <input type="text" class="form-control" id="csv" placeholder="CSV">
                             </div>
                             <div class="form-group">
-                                <label for="quantity">Donacion</label>
+                                <label for="quantity">Donación</label>
                                 <input type="password" class="form-control" id="quantity" placeholder="Cantidad">
                             </div>
 
