--- a/WADWolfram/src/main/resources/templates/oneProject.html
+++ b/WADWolfram/src/main/resources/templates/oneProject.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -96,7 +96,8 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div id="profilePhoto">
-                                                <img src="/img/dummies/img4.jpg" id="proyectImage" class="img-responsive" />
+                                                
+<img src={{image}} id="proyectImage" class="img-responsive" />
                                             </div>
                                         </div>
                                         <div class="col-md-6">
@@ -110,6 +111,7 @@
                                         </div>
                                     </div>
                                     <div class="row ">
+{{#opened}}
                                         <table class="table table-bordered table-striped ">
                                             <tbody>
                                                 <tr>
@@ -126,7 +128,7 @@
                                                 </tr>
                                                 <tr>
                                                     <th>Duración</th>
-                                                    <td>{{type}}</td>
+                                                    <td>{{time}}</td>
                                                 </tr>
                                                 <tr>
                                                     <th>Año de inicio</th>
@@ -134,6 +136,7 @@
                                                 </tr>
                                             </tbody>
                                         </table>
+{{/opened}}
                                     </div>
                                 </div>
                                 {{/Project}}
