I've added more methods into project controller and created index template

--- a/WADWolfram/src/main/resources/templates/oneProject.html
+++ b/WADWolfram/src/main/resources/templates/oneProject.html
@@ -128,7 +128,7 @@
                                                 </tr>
                                                 <tr>
                                                     <th>Duración</th>
-                                                    <td>{{time}}</td>
+                                                    <td>{{time}} meses</td>
                                                 </tr>
                                                 <tr>
                                                     <th>Año de inicio</th>
