--- a/WADWolfram/src/main/resources/templates/oneProject.html
+++ b/WADWolfram/src/main/resources/templates/oneProject.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -96,8 +96,7 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div id="profilePhoto">
-                                                
-<img src={{image}} id="proyectImage" class="img-responsive" />
+                                                <img src={{image}} id="proyectImage" class="img-responsive" />
                                             </div>
                                         </div>
                                         <div class="col-md-6">
@@ -111,7 +110,7 @@
                                         </div>
                                     </div>
                                     <div class="row ">
-{{#opened}}
+                                        {{#opened}}
                                         <table class="table table-bordered table-striped ">
                                             <tbody>
                                                 <tr>
@@ -136,7 +135,7 @@
                                                 </tr>
                                             </tbody>
                                         </table>
-{{/opened}}
+                                        {{/opened}}
                                     </div>
                                 </div>
                                 {{/Project}}
