--- a/WADWolfram/src/main/resources/templates/index_template.html
+++ b/WADWolfram/src/main/resources/templates/index_template.html
@@ -107,29 +107,16 @@
                                 <br/>
 
                                 <h4>Colabora con nuestros proyectos</h4>
+{{#projects}}
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuetext="Ensayo clínico del Dr. Fumihiko Urano: 0%" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                                        Ensayo clínico del Dr. Fumihiko Urano: 0%
+!--aquí:-->
+                                    <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow={{parcialBudget}} aria-valuetext="{{title}}: " aria-valuemin="0" aria-valuemax="100" style="width: {{parcialBudget}}%">
+                                      {{title}}
                                     </div>
                                 </div>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="93" aria-valuetext="Ensayo clínico liderado por Dr. Timothy Barrett: 93%" aria-valuemin="0" aria-valuemax="100" style="width: 93%">
-                                        Ensayo clínico liderado por Dr. Timothy Barrett: 93%
-                                    </div>
-                                </div>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="69" aria-valuetext="Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía. Proyectos de Investigación en Salud: 69%" aria-valuemin="0" aria-valuemax="100" style="width: 69%">
-                                        Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía: 69%
-                                    </div>
-                                </div>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuetext="Investigación y Atención bio-psicosocial a las personas afectadas por el síndrome de Wolfram y a sus familiares: 100%" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                                        Investigación y Atención bio-psicosocial a las personas afectadas por el síndrome de Wolfram y a sus familiares: 100%
-                                    </div>
-                                </div>
-
+{{/projects}}
                                 <div class="flex-caption">
-                                    <a href="projects.html" class="btn btn-theme">¡Anímate y participa!</a>
+                                    <a href="projects_template.html" class="btn btn-theme">¡Anímate y participa!</a>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-lg-6">
