--- a/WADWolfram/src/main/resources/templates/pay.html
+++ b/WADWolfram/src/main/resources/templates/pay.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -70,16 +70,14 @@
                     <div class="col-lg-12">
 
                         <div id="data">
-                            {{#User}}
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Nombre</label>
-                                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="{{name}}">
+                                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Nombre">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Apellidos</label>
-                                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="{{surname}}">
+                                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Apellidos">
                             </div>
-                            {{/User}}
                             <div class="form-group">
                                 <label for="creditCard">Tarjeta de crédito</label>
                                 <input type="text" class="form-control" id="creditCard" placeholder="Número de tarjeta">
