Admin templates modified. Correct navigation through pages

--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
@@ -45,7 +45,7 @@
                 <div data-brackets-id='137' class="col-md-8 col-sm-8 col-xs-8">
                     <!-- Logo -->
                     <div data-brackets-id='138' class="logo">
-                        <h1 data-brackets-id='139'><a data-brackets-id='140' href="index.html">Admin WAD Wolfram</a></h1>
+                        <h1 data-brackets-id='139'><a data-brackets-id='140' href="/admin/Index">Admin WAD Wolfram</a></h1>
                     </div>
                 </div>
                 <div data-brackets-id='141' class="col-md-2 col-sm-2 col-xs-2" style="margin-left: 180px">
@@ -54,8 +54,8 @@
                             <li data-brackets-id='144' class="dropdown">
                                 <a data-brackets-id='145' href="#" class="dropdown-toggle" data-toggle="dropdown">Mi cuenta <b data-brackets-id='146' class="caret"></b></a>
                                 <ul data-brackets-id='147' class="dropdown-menu animated fadeInUp">
-                                    <li data-brackets-id='148'><a data-brackets-id='149' href="profile.html">Perfil</a></li>
-                                    <li data-brackets-id='150'><a data-brackets-id='151' href="login.html">Cerrar sesión</a></li>
+                                    <li data-brackets-id='148'><a data-brackets-id='149' href="/admin/Profile">Perfil</a></li>
+                                    <li data-brackets-id='150'><a data-brackets-id='151' href="/login">Cerrar sesión</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -71,10 +71,10 @@
                 <div data-brackets-id='155' class="sidebar content-box " style="display: block; ">
                     <ul data-brackets-id='156' class="nav ">
                         <!-- Main menu -->
-                        <li data-brackets-id='157'><a data-brackets-id='158' href="index.html "><i data-brackets-id='159' class="glyphicon glyphicon-home "></i> Inicio</a></li>
-                        <li data-brackets-id='160'><a data-brackets-id='161' href="addproject.html "><i data-brackets-id='162' class="glyphicon glyphicon-pencil "></i> Añadir Proyecto</a></li>
-                        <li data-brackets-id='163' class="current"><a data-brackets-id='164' href="donations.html"><i data-brackets-id='165' class="glyphicon glyphicon-euro"></i> Donaciones</a></li>
-                        <li data-brackets-id='166'><a data-brackets-id='167' href="addblog.html "><i data-brackets-id='168' class="glyphicon glyphicon-tasks "></i> Añadir Noticia</a></li>
+                        <li data-brackets-id='157'><a data-brackets-id='158' href="/admin/Index"><i data-brackets-id='159' class="glyphicon glyphicon-home "></i> Inicio</a></li>
+                        <li data-brackets-id='160'><a data-brackets-id='161' href="/admin/AddProject"><i data-brackets-id='162' class="glyphicon glyphicon-pencil "></i> Añadir Proyecto</a></li>
+                        <li data-brackets-id='163' class="current"><a data-brackets-id='164' href="/admin/Donations"><i data-brackets-id='165' class="glyphicon glyphicon-euro"></i> Donaciones</a></li>
+                        <li data-brackets-id='166'><a data-brackets-id='167' href="/admin/AddBlog"><i data-brackets-id='168' class="glyphicon glyphicon-tasks "></i> Añadir Noticia</a></li>
                         <li data-brackets-id='169' class="submenu ">
                             <a data-brackets-id='170' href="# ">
                                 <i data-brackets-id='171' class="glyphicon glyphicon-record "></i> Mi cuenta
@@ -82,8 +82,8 @@
                             </a>
                             <!-- Sub menu -->
                             <ul data-brackets-id='173'>
-                                <li data-brackets-id='174'><a data-brackets-id='175' href="profile.html ">Perfil</a></li>
-                                <li data-brackets-id='176'><a data-brackets-id='177' href="# ">Cerrar sesión</a></li>
+                                <li data-brackets-id='174'><a data-brackets-id='175' href="/admin/Profile">Perfil</a></li>
+                                <li data-brackets-id='176'><a data-brackets-id='177' href="/login">Cerrar sesión</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -180,7 +180,7 @@
         <div data-brackets-id='225' class="container ">
 
             <div data-brackets-id='226' class="copy text-center ">
-                WAD Wolfram <a data-brackets-id='227' href='#'>Cerrar sesión</a>
+                WAD Wolfram <a data-brackets-id='227' href='/login'>Cerrar sesión</a>
             </div>
 
         </div>
