--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addblog.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addblog.html
@@ -29,7 +29,7 @@
                 <div class="col-md-8 col-sm-8 col-xs-8">
                     <!-- Logo -->
                     <div class="logo">
-                        <h1><a href="index.html">Admin WAD Wolfram</a></h1>
+                        <h1><a href="/admin/Index">Admin WAD Wolfram</a></h1>
                     </div>
                 </div>
                 <!--<div class="col-md-5">
@@ -50,8 +50,8 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mi cuenta <b class="caret"></b></a>
                                 <ul class="dropdown-menu animated fadeInUp">
-                                    <li><a href="profile.html">Perfil</a></li>
-                                    <li><a href="login.html">Cerrar sesión</a></li>
+                                    <li><a href="/admin/Profile">Perfil</a></li>
+                                    <li><a href="/login">Cerrar sesión</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -67,10 +67,10 @@
                 <div class="sidebar content-box " style="display: block; ">
                     <ul class="nav ">
                         <!-- Main menu -->
-                        <li><a href="index.html "><i class="glyphicon glyphicon-home "></i> Inicio</a></li>
-                        <li><a href="addproject.html "><i class="glyphicon glyphicon-pencil "></i> Añadir Proyecto</a></li>
-                        <li><a href="donations.html "><i class="glyphicon glyphicon-euro"></i> Donaciones</a></li>
-                        <li class="current"><a href="addblog.html "><i class="glyphicon glyphicon-tasks "></i> Añadir Noticia</a></li>
+                        <li><a href="/admin/Index"><i class="glyphicon glyphicon-home "></i> Inicio</a></li>
+                        <li><a href="/admin/AddProject"><i class="glyphicon glyphicon-pencil "></i> Añadir Proyecto</a></li>
+                        <li><a href="/admin/Donations"><i class="glyphicon glyphicon-euro"></i> Donaciones</a></li>
+                        <li class="current"><a href="/admin/AddBlog"><i class="glyphicon glyphicon-tasks "></i> Añadir Noticia</a></li>
                         <li class="submenu ">
                             <a href="# ">
                                 <i class="glyphicon glyphicon-record "></i> Mi cuenta
@@ -78,8 +78,8 @@
                             </a>
                             <!-- Sub menu -->
                             <ul>
-                                <li><a href="profile.html ">Perfil</a></li>
-                                <li><a href="# ">Cerrar sesión</a></li>
+                                <li><a href="/admin/Profile">Perfil</a></li>
+                                <li><a href="/login">Cerrar sesión</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -217,7 +217,7 @@
         <div class="container ">
 
             <div class="copy text-center ">
-                WAD Wolfram <a href='#'>Cerrar sesión</a>
+                WAD Wolfram <a href='/login'>Cerrar sesión</a>
             </div>
 
         </div>
