--- a/WADWolfram/src/main/resources/templates/index_template.html
+++ b/WADWolfram/src/main/resources/templates/index_template.html
@@ -36,24 +36,24 @@
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="index.html"><img src="/img/logo.png" alt="Logotipo de la asociación" width="199" height="52" /></a>
+                            <a class="navbar-brand" href="/"><img src="/img/logo.png" alt="Logotipo de la asociación" width="199" height="52" /></a>
                         </div>
                         <div class="navbar-collapse collapse ">
                             <ul class="nav navbar-nav">
-                                <li class="active"><a href="index.html">Inicio</a></li>
-                                <li><a href="projects.html">Proyectos</a></li>
+                                <li class="active"><a href="/">Inicio</a></li>
+                                <li><a href="/projects">Proyectos</a></li>
 
-                                <li><a href="blog.html">Noticias</a></li>
+                                <li><a href="/blog">Noticias</a></li>
                                 <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
 
-                                <li><a href="contact.html">Contacto</a></li>
-                                <li><a href="about.html">Sobre sus desarrolladores</a></li>
+                                <li><a href="/contact">Contacto</a></li>
+                                <li><a href="/about">Sobre sus desarrolladores</a></li>
 
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="register.html">Únete</a></li>
-                                        <li><a href="login.html">Inicia sesión</a></li>
+                                        <li><a href="/register">Únete</a></li>
+                                        <li><a href="/login">Inicia sesión</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -81,6 +81,7 @@
                                     <div class="flex-caption">
                                         <h3>{{title}}</h3>
                                         <p>{{shorDescription}}</p>
+                                        <!--cambiar lo de arriba-->
                                         <a href=(/Project?id={{id}}) class="btn btn-theme">Leer más</a>
                                     </div>
                                 </li>
@@ -129,7 +130,7 @@
                                 </div>
 
                                 <div class="flex-caption">
-                                    <a href="projects.html" class="btn btn-theme">¡Anímate y participa!</a>
+                                    <a href="/projects" class="btn btn-theme">¡Anímate y participa!</a>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-lg-6">
@@ -138,7 +139,7 @@
                                     <ul class="recent">
 {{#news}}
                                         <li>
-                                            <a href="blog.html#sindromeWolfram"> <img src={{image}} class="pull-left" alt="Foto de la noticia" /></a>
+                                            <a href=(/new?id={{id}})> <img src={{image}} class="pull-left" alt="Foto de la noticia" /></a>
                                             <h6><a href=(/new?id={{id}})>{{title}}</a></h6>
                                         </li>
 {{/news}}
@@ -175,7 +176,7 @@
                             <ul class="link-list">
                                 <li><a href="#">Términos y condiciones</a></li>
                                 <li><a href="#">Política de privacidad</a></li>
-                                <li><a href="contact.html">Contáctanos</a></li>
+                                <li><a href="/contact">Contáctanos</a></li>
                             </ul>
                         </div>
 
