--- a/WADWolfram/src/main/resources/templates/login.html
+++ b/WADWolfram/src/main/resources/templates/login.html
@@ -39,12 +39,12 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="index.html"><img src="/img/logo.png" alt="" width="199" height="52" /></a>
+                            <a class="navbar-brand" href="/"><img src="/img/logo.png" alt="" width="199" height="52" /></a>
                         </div>
                         <div class="navbar-collapse collapse ">
                             <ul class="nav navbar-nav">
-                                <li><a href="index.html">Inicio</a></li>
-                                <li><a href="projects.html">Proyectos</a></li>
+                                <li><a href="/">Inicio</a></li>
+                                <li><a href="/projects">Proyectos</a></li>
                                 <!--  <li class="dropdown">
                             <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Proyectos <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
@@ -60,16 +60,16 @@
 								</li>
                             </ul>
                         </li>-->
-                                <li><a href="blog.html">Noticias</a></li>
+                                <li><a href="/blog">Noticias</a></li>
                                 <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
 
-                                <li><a href="contact.html">Contacto</a></li>
-                                <li><a href="about.html">Sobre sus desarrolladores</a></li>
+                                <li><a href="/contact">Contacto</a></li>
+                                <li><a href="/about">Sobre sus desarrolladores</a></li>
                                 <li class="dropdown active">
                                     <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="register.html">Únete</a></li>
-                                        <li><a href="login.html">Inicia sesión</a></li>
+                                        <li><a href="/register">Únete</a></li>
+                                        <li><a href="/login">Inicia sesión</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -85,7 +85,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <ul class="breadcrumb">
-                            <li><a href="index.html"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
+                            <li><a href="/"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
                             <li>Cuenta</li>
                             <li class="active">Inicia sesión</li>
                         </ul>
@@ -123,7 +123,7 @@
                                 <div class="col-xs-12 col-md-6">
                                     <input type="submit" value="Entrar" class="btn btn-primary btn-block btn-lg" tabindex="7">
                                 </div>
-                                <div class="col-xs-12 col-md-6">¿Todavía no tienes una cuenta? <a href="register.html">Únete ya</a></div>
+                                <div class="col-xs-12 col-md-6">¿Todavía no tienes una cuenta? <a href="/register">Únete ya</a></div>
                             </div>
                         </form>
                     </div>
@@ -155,7 +155,7 @@
                             <ul class="link-list">
                                 <li><a href="#">Términos y condiciones</a></li>
                                 <li><a href="#">Política de privacidad</a></li>
-                                <li><a href="contact.html">Contáctanos</a></li>
+                                <li><a href="/contact">Contáctanos</a></li>
                             </ul>
                         </div>
 
