Changes in userPage
User

--- a/WADWolfram/src/main/resources/templates/users.html
+++ b/WADWolfram/src/main/resources/templates/users.html
@@ -112,7 +112,7 @@
                                         <ul class="list-group">
                                             <h2>Proyectos Colaborados</h2> {{#colaborateProjects}}
                                             <li class="list-group-item">
-                                                <H3><a href="oneProyect.html">{{title}}</a></H3>
+                                                <H3><a href="/project?id={{projectId}}">{{title}}</a></H3>
                                                 <p>{{shortDescription}}</p>
                                                 <p>{{money}}</p>
                                             </li>
